resources/assets/less/bem/store-xsolla.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.store-xsolla {
  align-items: center;
  background-color: osu-hsla(@osu-colour-c1, 0.7);
  color: @osu-colour-b6;
  font-size: @font-size--normal;
  position: absolute;
  bottom: 100%;
  margin-bottom: 10px;
  right: 0;
  display: none;

  @media @desktop {
    display: flex;
  }

  &__icon {
    width: 40px;
    height: 40px;
    background-image: url('/images/layout/xsolla.png');
    background-size: contain;
  }

  &__text {
    padding: 0 10px;
  }
}

